samples/_failures_safe/1761045194_6d6b99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06c05d33.c: In function ‘bfs’:
./samples/SAFE/__tmp_06c05d33.c:173:16: error: missing terminating " character
  173 |         printf("%
      |                ^~
./samples/SAFE/__tmp_06c05d33.c:173:9: error: expected expression at end of input
  173 |         printf("%
      |         ^~~~~~
./samples/SAFE/__tmp_06c05d33.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06c05d33.c:173:9: error: expected declaration or statement at end of input
